Adding OpenAPI Swagger & MapStruct & Frontend Search & Patti Component
