# src/main/java/com/biller/patti/farmer/FarmerController.java
@@ -1,5 +1,7 @@
 package com.biller.patti.farmer;
 
+import com.openapi.gen.springboot.api.GetFarmerApi;
+import com.openapi.gen.springboot.dto.FarmerDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -7,28 +9,14 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
-public class FarmerController {
+public class FarmerController implements GetFarmerApi {
 
     @Autowired
-    FarmerDao farmerDao;
+    FarmerService farmerService;
 
-    @GetMapping(value = "/getByName/{firstName}")
-    ResponseEntity<List<Farmer>> getFarmerByFirstName(@PathVariable String firstName){
-        return ResponseEntity.ok(farmerDao.getFarmerByFirstName(firstName));
-    }
-
-    @PostMapping(value = "/saveFarmer")
-    ResponseEntity<Farmer> insertFarmer(@RequestBody Farmer farmer){
-        return ResponseEntity.ok(farmerDao.saveFarmer(farmer));
-    }
-
-    @GetMapping(value = "/getByLastName/{lastName}")
-    ResponseEntity<List<Farmer>> getFarmerByLastName(@PathVariable String lastName){
-        return ResponseEntity.ok(farmerDao.getFarmerByLastName(lastName));
-    }
-
-    @GetMapping(value = "/getById/{id}")
-    ResponseEntity<Farmer> getFarmerByLastName(@PathVariable Long id){
-        return ResponseEntity.ok(farmerDao.getFarmerById(id));
+    @CrossOrigin(origins = "http://localhost:4200")
+    @Override
+    public ResponseEntity<List<FarmerDto>> getFarmers(String keyword) {
+        return ResponseEntity.ok(farmerService.getFarmersMatchingPattern(keyword));
     }
 }
